--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Yapadubpadoo!</title>
+    <title>deep-ba-doo-ba-deep!</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
   </head>
   <body>
   <section class="section">
     <div class="container">
       <h1 class="title">
-        Yapadubpadoo
+        deep-ba-doo-ba-deep
       </h1>
       <p class="subtitle">
         Nice to see you <strong>Guest</strong>!
