--- a/index.html
+++ b/index.html
@@ -18,4 +18,9 @@
     </div>
   </section>
   </body>
+  <script>
+    function navigate() {
+      window.location.href = `seven-eleven://www.7eleven.mobi/navPage/SE119`;
+    }
+  </script>
 </html>
