--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>deep-ba-doo-ba-deep!</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
   </head>
-  <body>
+  <body onload="navigate()">
   <section class="section">
     <div class="container">
       <h1 class="title">
