--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
   </body>
   <script>
     function navigate() {
-      window.location.href = `seven-eleven://www.7eleven.mobi/navPage/SE119`;
+      // window.location.href = `seven-eleven://www.7eleven.mobi/navPage/SE119`;
+      window.open("https://www.facebook.com", "_system");
     }
   </script>
 </html>
