--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
   </body>
   <script>
     function navigate() {
-      window.location.href = `seven-eleven://www.7eleven.mobi/navPage/SE119`;
+//       window.location.href = `seven-eleven://www.7eleven.mobi/navPage/SE119`;
 //       window.open("https://www.facebook.com", "_system");
+      window.location.href = `safari-https://www.allonline.7eleven.co.th/`;
     }
   </script>
 </html>
