--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     function navigate() {
 //       window.location.href = `seven-eleven://www.7eleven.mobi/navPage/SE119`;
 //       window.open("https://www.facebook.com", "_system");
-      window.location.href = `safari-https://www.allonline.7eleven.co.th/`;
+      window.location.href = `safari://www.allonline.7eleven.co.th/`;
     }
   </script>
 </html>
