--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>deep-ba-doo-ba-deep!</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
   </head>
-  <body onload="navigate()">
   <section class="section">
     <div class="container">
       <h1 class="title">
@@ -15,13 +14,23 @@
       <p class="subtitle">
         Nice to see you <strong>Guest</strong>!
       </p>
+      <h2>Try to click the link below to see the navigation to All Online</h2>
+      <ul>
+        <li onclick="navigate('7-11 App')">Open using installed 7-11 Application</li>
+        <li onclick="navigate('Google Chrome')">Open using Safari</li>
+        <li onclick="navigate('Safari')">Open using Google Chrome</li>
     </div>
   </section>
   </body>
   <script>
-    function navigate() {
-//       window.location.href = `seven-eleven://www.7eleven.mobi/navPage/SE119`;
-      window.location.href = `safari://www.allonline.7eleven.co.th/`;
+    function navigate(target) {
+      const targetURLs = {
+        "7-11 App": "seven-eleven://www.7eleven.mobi/navPage/SE119",
+        "Google Chrome" : "googlechrome://www.allonline.7eleven.co.th"
+        "Safari" : "safari-https://www.allonline.7eleven.co.th"
+      }
+      if(targetURLs[target]) window.location.href = target;
+      else alert(`Cannot find target for "${target}"`)
     }
   </script>
 </html>
