--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         "Google Chrome" : "googlechrome://www.allonline.7eleven.co.th",
         "Safari" : "safari-https://www.allonline.7eleven.co.th",
       }
-      if(targetURLs[target]) window.location.href = target;
+      if(targetURLs[target]) window.location.href = targetURLs[target];
       else alert(`Cannot find target for "${target}"`)
     }
   </script>
