--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       </p>
       <h2>Try to click the link below to see the navigation to All Online</h2>
       <ul>
-        <li onclick="navigate('7-11 App')"><a href="#">Open using installed 7-11 Application</a></li>
-        <li onclick="navigate('Google Chrome')"><a href="#">Open using Safari</a></li>
-        <li onclick="navigate('Safari')"><a href="#">Open using Google Chrome</a></li>
+        <li onclick="navigate('7-11 App')"><a href="#">Open with installed 7-11 Application</a></li>
+        <li onclick="navigate('Google Chrome')"><a href="#">Open with Google Chrome</a></li>
+        <li onclick="navigate('Safari')"><a href="#">Open with Safari</a></li>
     </div>
   </section>
   </body>
