--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </p>
       <h2>Try to click the link below to see the navigation to All Online</h2>
       <ul>
-        <li onclick="navigate('seven-eleven')"><a href="#">Open with installed seven-elevenlication <code>seven-eleven://</code></a></li>
+        <li onclick="navigate('seven-eleven')"><a href="#">Open with installed 7-11 application <code>seven-eleven://</code></a></li>
         <li onclick="navigate('googlechrome')"><a href="#">Open with Google Chrome <code>googlechrome://</code></a></li>
         <li onclick="navigate('safari-https')"><a href="#">Open with Safari <code>safari-https://</code></a></li>
         <li onclick="navigate('safari')"><a href="#">Open with safari <code>safari://</code></a></li>
