--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <ul>
         <li onclick="navigate('seven-eleven')"><a href="#">Open with installed 7-11 application <code>seven-eleven://</code></a></li>
         <li onclick="navigate('googlechrome')"><a href="#">Open with Google Chrome <code>googlechrome://</code></a></li>
-        <li onclick="navigate('safari-https')"><a href="#">Open with Safari <code>safari-https://</code></a></li>
-        <li onclick="navigate('safari')"><a href="#">Open with safari <code>safari://</code></a></li>
+        <li onclick="navigate('safari-https')"><a href="#">Try to open with Safari <code>safari-https://</code></a></li>
+        <li onclick="navigate('safari')"><a href="#">Try to open with Safari <code>safari://</code></a></li>
     </div>
   </section>
   </body>
