--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li onclick="navigate('googlechrome')"><a href="#">Open with Google Chrome <code>googlechrome://</code></a></li>
         <li onclick="navigate('safari-https')"><a href="#">Try to open with Safari <code>safari-https://</code></a></li>
         <li onclick="navigate('safari')"><a href="#">Try to open with Safari <code>safari://</code></a></li>
-        <li onclick="navigate('fullLink')"><a href="#"Full Link</a></li>
+        <li onclick="navigate('fullLink')"><a href="#">Full Link</a></li>
     </div>
   </section>
   </body>
