--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         <li onclick="navigate('safari-https')"><a href="#">Try to open with Safari <code>safari-https://</code></a></li>
         <li onclick="navigate('safari')"><a href="#">Try to open with Safari <code>safari://</code></a></li>
         <li onclick="navigate('fullLink')"><a href="#">Full Link with Fallback</a></li>
-        <li onclick="navigate('fullLink')"><a href="https://www.7eleven.mobi/navPage/SE119?page=smart_category&category_id_th=-s-17253&utm_source=line_oa&fallback=yes">https://www.7eleven.mobi/navPage/SE119?page=smart_category&category_id_th=-s-17253&utm_source=line_oa&fallback=yes</a></li>
+        <li onclick="navigate('fullLink')"><a href="https://www.7eleven.mobi/navPage/SE119?page=smart_category&category_id_th=-s-17253&utm_source=line_oa&fallback=yes">Normal href</a></li>
+        <li onclick="navigate('intent')"><a href="#">Use intent <code>intent://</code></a></li>
+        
     </div>
   </section>
   </body>
@@ -33,7 +35,8 @@
         "googlechrome" : "googlechrome://www.allonline.7eleven.co.th",
         "safari-https" : "safari-https://www.allonline.7eleven.co.th",
         "safari" : "safari://www.allonline.7eleven.co.th",
-        "fullLink": "https://www.7eleven.mobi/navPage/SE119?page=smart_category&category_id_th=-s-17253&utm_source=line_oa&fallback=yes"
+        "fullLink": "https://www.7eleven.mobi/navPage/SE119?page=smart_category&category_id_th=-s-17253&utm_source=line_oa&fallback=yes",
+        "intent": "intent://www.7eleven.mobi/navPage/SE119?page=product_detail&product_id=453627&item_id=351908_0&utm_source=line_oa&fallback=yes#Intent;scheme=seven-eleven;end;",
       }
       if(targetURLs[target]) window.location.href = targetURLs[target];
       else alert(`Cannot find target for "${target}"`)
