--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li onclick="navigate('safari-https')"><a href="#">Try to open with Safari <code>safari-https://</code></a></li>
         <li onclick="navigate('safari')"><a href="#">Try to open with Safari <code>safari://</code></a></li>
         <li onclick="navigate('fullLink')"><a href="#">Full Link with Fallback</a></li>
-        <li onclick="navigate('fullLink')"><a href="https://www.7eleven.mobi/navPage/SE119?page=smart_category&category_id_th=-s-17253&utm_source=line_oa&fallback=yes">Normal href</a></li>
+        <li><a href="https://www.7eleven.mobi/navPage/SE119?page=smart_category&category_id_th=-s-17253&utm_source=line_oa&fallback=yes">Normal href</a></li>
         <li onclick="navigate('intent')"><a href="#">Use intent <code>intent://</code></a></li>
         <li onclick="navigate('dynamicLink')"><a href="#">Use Dynamic Link <code>https://7eleventh.page.link/WfHN</code></a></li>
         
