--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <li><a href="https://www.7eleven.mobi/navPage/SE119?page=smart_category&category_id_th=-s-17253&utm_source=line_oa&fallback=yes">Normal href</a></li>
         <li onclick="navigate('intent')"><a href="#">Use intent <code>intent://</code></a></li>
         <li onclick="navigate('dynamicLink')"><a href="#">Use Dynamic Link <code>https://7eleventh.page.link/WfHN</code></a></li>
+        <li><a href="intent://www.7eleven.mobi/navPage/SE119?page=product_detail&product_id=453627&item_id=351908_0&utm_source=line_oa&fallback=yes#Intent;scheme=seven-eleven;end;">Href uses <code>intent://</code></a></li>
         
     </div>
   </section>
